[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://interfaces/menu/FadePanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu_Music_Player.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Fade_Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer" parent="."]
layer = 99

[node name="Panel" type="Panel" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 1.0
margin_bottom = 1.0

[node name="SideMenu" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.085
anchor_top = 0.133
anchor_right = 0.892
anchor_bottom = 0.862
margin_left = 0.199997
margin_top = 0.239998
margin_right = 0.23999
margin_bottom = 0.359985

[node name="NewGameButton" type="ToolButton" parent="MainMenu/SideMenu"]
margin_right = 1033.0
margin_bottom = 72.0
text = "New Game"
icon = ExtResource( 3 )

[node name="ContinueButton" type="ToolButton" parent="MainMenu/SideMenu"]
margin_top = 76.0
margin_right = 1033.0
margin_bottom = 148.0
text = "Load Game"
icon = ExtResource( 3 )

[node name="OptionsButton" type="ToolButton" parent="MainMenu/SideMenu"]
margin_top = 152.0
margin_right = 1033.0
margin_bottom = 224.0
text = "Options"
icon = ExtResource( 3 )

[node name="QuitButton" type="ToolButton" parent="MainMenu/SideMenu"]
margin_top = 228.0
margin_right = 1033.0
margin_bottom = 300.0
text = "Exit"
icon = ExtResource( 3 )

[node name="FadePanel" parent="MainMenu" instance=ExtResource( 2 )]
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu_Music_Player" parent="." instance=ExtResource( 4 )]

[node name="Audio_Controler" type="AnimationPlayer" parent="MainMenu_Music_Player"]
root_node = NodePath("../AudioStreamPlayer")
anims/Fade_Out = SubResource( 1 )

[node name="Wait_Timer" type="Timer" parent="MainMenu_Music_Player"]
one_shot = true

[connection signal="timeout" from="MainMenu_Music_Player/Wait_Timer" to="." method="_on_Wait_Timer_timeout"]

[editable path="MainMenu_Music_Player"]
